jenkins file updated

--- a/jenkinsFile
+++ b/jenkinsFile
@@ -6,7 +6,7 @@ pipeline {
         stage('Set Up Python Virtual Environment') {
             steps {
                 echo "🐍 Creating virtual environment..."
-                sh 'python3 -m venv venv'
+                sh 'apt install python3.12'
             }
         }
 
